--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,7 @@ input[type=text]{
     margin-top: 10px;
 }
 
-#btnCorrigir{
-    background-color: #4CAF50; /* Green */
+.btnsStyles{
     border: none;
     color: white;
     padding: 10px 30px;
@@ -92,6 +91,37 @@ input[type=text]{
     margin: 25px 0px;
 }
 
-#btnCorrigir:hover{
+.btnsStyles:hover{
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.btnCorrigir{
+    background-color: #4CAF50;
+}
+
+.btnLimpar{
+    background-color: #ff9900;
+}
+
+.divDownload {
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 7px 13px;
+    cursor: pointer;
+    font-size: 15px;
+    display: inline;
+  }
+
+ .divDownload a {
+    color: white;
+    text-decoration: none;
+ }
+
+.divDownload:hover {
+    background-color: RoyalBlue;
+  }
+
+.fa-download:before {
+    margin-right: 10px;
 }
