--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,3 +1,10 @@
+*{
+  font-family: 'Roboto', sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .divDownload {
     background-color: DodgerBlue;
     border: none;
