--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,16 @@ body{
     text-align: center;
 }
 
+select option{
+    outline: none;
+}
+
+select{
+    padding: 5px;
+    text-align: center;
+    outline: none;
+}
+
 input[type=text]{
     padding: 5px;
     width: 85px;
@@ -29,7 +39,7 @@ input[type=text]{
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 20px 0px;
+    padding: 20px 0px;
 }
 
 .quantPerguntas input[type=submit]{
@@ -80,6 +90,7 @@ input[type=text]{
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
     margin: 25px 0px;
+    outline: none;
 }
 
 .btnsStyles:hover{
