--- a/template/index.html
+++ b/template/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/scripts.js" defer></script>
     </head>
-    <body style= "margin: 0;">
+    <body>
         <header>
             <ul class="topnav">
                 <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
