--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>AutoCT - Download Template</title>
+        <link rel='icon' href='../favicon.png' type='image/png'/>
         
         <!-- Extern imports -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
