--- a/template/index.html
+++ b/template/index.html
@@ -28,7 +28,7 @@
                 <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
                 <li><a href="/AutoCT">Home</a></li>
                 <li><a class="active" href="">Download Template</a></li>
-                <li><a href="/AutoCT/sobre">Sobre</a></li>
+                <li><a href="/AutoCT/about">About</a></li>
             </ul>
         </header>
             <div class="divDownload" id="aaa" onclick="downloadFile(nameFile = 'Template.pdf')">
