--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,8 +23,6 @@ input[type=text]{
     padding: 5px;
     width: 85px;
     text-align: center;
-    border-style: solid;
-    border-width: 1px;
 }
 
 #alternatives, #others{
@@ -103,4 +101,75 @@ input[type=text]{
 
 .btnClear{
     background-color: #ff9900;
+}
+
+.resultAPI{
+    text-align: initial;
+    margin-top: 30px;
+}
+
+.resultAPI h1{
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.imageTest{
+    width: 400px;
+    height: 500px;
+    max-width: 400px;
+    max-height: 500px;
+    background-color: #efe9e9;
+    margin-top: 10px;
+    border:1px solid black;
+}
+
+.test{
+    background-color: #8080800d;
+    display: flex;
+    margin-bottom: 25px;
+    width: 100%;
+    padding: 10px;
+}
+
+.resultResponse{
+    flex-grow: 1;
+    text-align: initial;
+}
+
+.resultResponse h3{
+    font-size: 15px;
+    margin-top: 10px;
+}
+
+.alternativesAPI, .othersAPI{
+    margin: 5px 0px 10px 15px;
+}
+
+.alternativesAPI input[type=text]{
+    width: 30px;
+}
+
+.alt, .oth{
+    display: inline-block;
+    padding: 5px 8px;
+    margin: 5px;
+}
+
+.alt label{
+    margin-right: 5px;
+}
+
+span {
+    width: 400px;
+    height: 500px;
+    border:1px solid black;
+    margin-top: 15px;
+    margin-left: 10px;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+span img{
+    width: 100%;
+    height: 100%;
 }
