--- a/pages/template/index.html
+++ b/pages/template/index.html
@@ -12,13 +12,13 @@
         </script>
         <meta charset="utf-8"/>
         <title>AutoCT - Download Template</title>
-        <link rel='icon' href='../favicon.png' type='image/png'/>
+        <link rel='icon' href='../../assets/favicon.png' type='image/png'/>
         
         <!-- Extern imports -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
         <!-- My imports -->
-        <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+        <link rel="stylesheet" type="text/css" href="../../assets/css/navbar.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="js/scripts.js" defer></script>
     </head>
@@ -28,7 +28,7 @@
                 <li><a id="nameWebsite" href="/AutoCT-Web">AutoCT</a></li>
                 <li><a href="/AutoCT">Home</a></li>
                 <li><a class="active" href="">Download Template</a></li>
-                <li><a href="/AutoCT/about">About</a></li>
+                <li><a href="/AutoCT/pages/about">About</a></li>
             </ul>
         </header>
             <div class="divDownload" id="aaa" onclick="downloadFile(nameFile = 'Template.pdf')">
