--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,6 +164,7 @@ input[type=text]{
     float: right;
     bottom: 0;
     right: 0;
+    background-color: #00000014;
 }
 
 .alt label{
@@ -198,6 +199,7 @@ span img{
     font-weight: 600;
     letter-spacing: 0.02em;
     display: none;
+    z-index: 999;
 }
 
 .downloadCsv:hover{
